--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
     <string name="slide_4_title">Best Deal</string>
     <string name="slide_4_desc">Find the best cars and motorbikes with the best price</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_users">UsersActivity</string>
 </resources>
