--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="slide_4_desc">Find the best cars and motorbikes with the best price</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_users">UsersActivity</string>
+    <string name="title_activity_form_user">FormUserActivity</string>
 </resources>
