--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,11 @@
         <item>Executive</item>
     </string-array>
 
+    <string-array name="role_rental">
+        <item>rental</item>
+        <item>personal</item>
+    </string-array>
+
     <string-array name="multi_select_list_preference_default_value" />
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
