--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,4 +197,5 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_users">UsersActivity</string>
     <string name="title_activity_form_user">FormUserActivity</string>
+    <string name="title_activity_feature">FeatureActivity</string>
 </resources>
