--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,5 @@
     <string name="title_activity_form_user">FormUserActivity</string>
     <string name="title_activity_feature">FeatureActivity</string>
     <string name="title_activity_form_feature">FormFeatureActivity</string>
+    <string name="title_activity_complete_registration">CompleteRegistrationActivity</string>
 </resources>
