--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,4 +266,5 @@
     <string name="title_activity_feature">FeatureActivity</string>
     <string name="title_activity_form_feature">FormFeatureActivity</string>
     <string name="title_activity_complete_registration">CompleteRegistrationActivity</string>
+    <string name="title_activity_select_category">SelectCategoryActivity</string>
 </resources>
