--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">Gunakan alamat surel yang valid</string>
     <string name="error_invalid_password">Minimal 5 karakter ( hanya angka atau huruf )</string>
+    <string name="error_invalid_confirm_password">Konfirmasi Password tidak sesuai</string>
+    <string name="error_invalid_phone">Minimal 10 dan miksimal 12 karakter ( hanya angka )</string>
     <string name="error_incorrect_password">Kata kunci tidak sesuai</string>
     <string name="error_field_required">Wajib diisi!</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
