--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,8 +139,8 @@
         <item>Jeep</item>
         <item>Pickup</item>
         <item>Box</item>
-        <item>Truck</item>
-        <item>Bus</item>
+        <!--<item>Truck</item>-->
+        <!--<item>Bus</item>-->
     </string-array>
 
     <string-array name="motorcycle_subcategory_entries">
@@ -263,7 +263,6 @@
         <item>BNI</item>
         <item>BRI</item>
         <item>Mandiri</item>
-        <item>Danamon</item>
     </string-array>
 
     <string-array name="car_brand_entries">
@@ -346,7 +345,10 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
-        <item>Lainnya</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
     </string-array>
 
     <string-array name="fuel_entries">
@@ -356,6 +358,11 @@
         <item>Premium</item>
         <item>Solar</item>
         <item>Lainnya</item>
+    </string-array>
+
+    <string-array name="range_name_entries">
+        <item>HIGH SEASON</item>
+        <item>LOW SEASON</item>
     </string-array>
 
     <string-array name="action_edit_delete">
