--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_activity_dashboard">DashboardActivity</string>
     <string name="title_activity_login">Sign in</string>
 
+    <!--<string name="google_api_key">AIzaSyASlk5weV-2lDF4-KZbj9p69AQ_i7zKk4Q</string>-->
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password </string>
@@ -14,6 +16,9 @@
     <string name="error_invalid_phone">Minimal 10 dan miksimal 12 karakter ( hanya angka )</string>
     <string name="error_incorrect_password">Kata kunci tidak sesuai</string>
     <string name="error_field_required">Wajib diisi!</string>
+    <string name="error_field_not_complete">Harap Lengkapi Form</string>
+    <string name="error_main_image_not_complete">Harap Masukan Gambar Aset</string>
+
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
@@ -447,6 +452,9 @@
     <string name="resend_code"><u>KIRIM ULANG</u></string>
     <string name="agreement_link">Dengan DAFTAR, saya setuju dengan <u>Syarat dan Kebijakan</u> yang berlaku.</string>
 
+    <string name="member_badge_basic">Basic</string>
+    <string name="member_badge_verified">Verified</string>
+    <string name="member_badge_smart_con">Smart Consumer</string>
     <string name="basic_desc">* Informasi dasar penyewa (nama, email dan nomor telepon).</string>
     <string name="verified_desc">"\u2022" Basic. \n"\u2022" 2 dokumen penyewa/1 dokumen dan 1 akun sosial media.</string>
     <string name="smart_cust_desc">"\u2022" Verified. \n"\u2022" 5 Transaksi sukses.</string>
