--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
 
     <string name="action_logout">Keluar</string>
     <string name="action_search">Cari</string>
+    <string name="action_refresh">Segarkan</string>
     <string name="action_add">Cari</string>
     <string name="action_delete">Cari</string>
     <string name="action_go_home">Go Home Now !</string>
