- Voucher Catalog - Driver Assign FIX - Get Administration Name On Profile - Addtional Feature Name Request Implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,7 +139,7 @@
         <item>Elektronik</item>
         <item>Sepeda</item>
         <item>Peralatan Kantor</item>
-        <item>Pakaian</item>
+        <item>Fashion</item>
     </string-array>
 
     <string-array name="asset_subcategory_entries">
