- KTP - Delete Schedule - update category

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="error_invalid_email">Gunakan alamat surel yang valid</string>
     <string name="error_invalid_password">Minimal 7 karakter ( hanya angka atau huruf )</string>
     <string name="error_invalid_confirm_password">Konfirmasi Password tidak sesuai</string>
-    <string name="error_invalid_phone">Minimal 10 dan miksimal 12 karakter ( hanya angka )</string>
+    <string name="error_invalid_phone">Minimal 10 dan maksimal 12 karakter ( hanya angka )</string>
     <string name="error_incorrect_password">Kata kunci tidak sesuai</string>
     <string name="error_field_required">Wajib diisi!</string>
     <string name="error_field_not_complete">Harap Lengkapi Form</string>
@@ -476,7 +476,7 @@
     <string name="member_badge_verified">Verified</string>
     <string name="member_badge_smart_con">Smart Consumer</string>
     <string name="basic_desc">"\u2022" Memiliki informasi dasar (Nama, Email dan no. HP)</string>
-    <string name="verified_desc">"\u2022" Basic \n"\u2022" KTP dan KK / Rekening Listrik atau KTP dan 1 akun sosial media</string>
+    <string name="verified_desc">"\u2022" Basic \n"\u2022" KTP dan KK / Rekening Listrik atau KTP dan \n"1 akun sosial media</string>
     <string name="smart_cust_desc">"\u2022" Verified. \n"\u2022" Telah menyelesaikan minimal 5 kali transaksi</string>
 
     <string name="value_500jt">500 Juta</string>
