--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,25 +10,24 @@
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password </string>
     <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Masuk</string>
+    <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">Gunakan alamat surel yang valid</string>
-    <string name="error_invalid_password">Minimal 8 karakter ( hanya angka atau huruf )</string>
+    <string name="error_invalid_password">Minimal 7 karakter ( hanya angka atau huruf )</string>
     <string name="error_invalid_confirm_password">Konfirmasi Password tidak sesuai</string>
-    <string name="error_invalid_phone">Minimal 10 dan maksimal 12 karakter ( hanya angka )</string>
+    <string name="error_invalid_phone">Minimal 10 dan miksimal 12 karakter ( hanya angka )</string>
     <string name="error_incorrect_password">Kata kunci tidak sesuai</string>
     <string name="error_field_required">Wajib diisi!</string>
     <string name="error_field_not_complete">Harap Lengkapi Form</string>
     <string name="error_main_image_not_complete">Harap Masukan Gambar Aset</string>
-    <string name="error_field_sim">Wajib diisi dengan 12 nomor SIM</string>
 
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
     <string name="forgot_text">
     Link untuk merubah password anda
-        akan kami kirimkan ke email valid Anda</string>
-    <string name="login_text">Masuk ke Akun Anda</string>
-    <string name="forgot_password">Lupa Password?</string>
+        akan kami kirimkan ke email valid anda</string>
+    <string name="login_text">Sign in to your account</string>
+    <string name="forgot_password">Forgot Password?</string>
     <string name="help">Help</string>
     <string name="aktif_text">Masukan kode aktivasi</string>
 
@@ -448,11 +447,11 @@
     <string name="slide_1_title">Rentist</string>
     <string name="slide_1_desc">Solusi Partner Rental</string>
     <string name="slide_2_title">Partner Terpercaya</string>
-    <string name="slide_2_desc">Jadilah Partner terpercaya dengan melengkapi informasi akun Rental Anda dan dapatkan kemudahan dalam bertransaksi.</string>
+    <string name="slide_2_desc">Lengkapi informasi akun Rental Anda \n dan dapatkan kemudahan \n dalam bertransaksi</string>
     <string name="slide_3_title">Perlindungan Aset</string>
-    <string name="slide_3_desc">Lingdungi aset Anda dengan Syarat dan Kebijakan yang dapat Anda tentukan sendiri.</string>
+    <string name="slide_3_desc">Lindungi aset Anda dengan \n Syarat dan Kebijakan yang dapat Anda \n tentukan sendiri</string>
     <string name="slide_4_title">Kelola Informasi</string>
-    <string name="slide_4_desc">Kelola setiap aset anda, perbarui informasi, dan adakan event promo untuk meningkatkan jumlah transaksi.</string>
+    <string name="slide_4_desc">Kelola setiap aset anda, \n perbarui informasi, dan adakan \n event promo untuk meningkatkan jumlah transaksi.</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_users">UsersActivity</string>
     <string name="title_activity_form_user">FormUserActivity</string>
@@ -465,7 +464,7 @@
     <!-- Link -->
     <string name="perbarui_akun_notif"><u>Perbarui Akun Disini</u></string>
     <string name="resend_code"><u>KIRIM ULANG</u></string>
-    <string name="agreement_link">Dengan DAFTAR, saya setuju dengan <u>Syarat dan Kebijakan</u> yang berlaku.</string>
+    <string name="agreement_link">Syarat dan Kebijakan</string>
 
     <string name="role_superadmin">SuperAdmin</string>
     <string name="role_admin">Admin</string>
@@ -488,7 +487,7 @@
     <string name="label_insurance">*Apakah aset memiliki asuransi?</string>
     <string name="label_harga_sewa">Harga Sewa/Hari</string>
     <string name="label_tambah_harga">+ Tambah Harga (Pilihan)</string>
-    
+
     <string name="delivery_pickup">pickup</string>
     <string name="delivery_deliver">deliver</string>
     <string name="delivery_logistic">logistic</string>
@@ -496,4 +495,5 @@
     <string name="btn_save">Simpan</string>
     
     <string name="activation_text_check">Mohon periksa SMS dan email anda \n"untuk mendapatkan kode aktivasi</string>
+    <string name="error_field_sim">Harap masukan 12 nomor SIM anda</string>
 </resources>
