--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password </string>
     <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in_short">Masuk</string>
     <string name="error_invalid_email">Gunakan alamat surel yang valid</string>
     <string name="error_invalid_password">Minimal 7 karakter ( hanya angka atau huruf )</string>
     <string name="error_invalid_confirm_password">Konfirmasi Password tidak sesuai</string>
@@ -27,7 +27,7 @@
     Link untuk merubah password anda
         akan kami kirimkan ke email valid anda</string>
     <string name="login_text">Sign in to your account</string>
-    <string name="forgot_password">Forgot Password?</string>
+    <string name="forgot_password">Lupa Password?</string>
     <string name="help">Help</string>
     <string name="aktif_text">Masukan kode aktivasi</string>
 
