--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,11 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password </string>
+    <string name="prompt_password">Kata Sandi </string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Masuk</string>
     <string name="error_invalid_email">Gunakan alamat surel yang valid</string>
-    <string name="error_invalid_password">Minimal 7 karakter ( hanya angka atau huruf )</string>
+    <string name="error_invalid_password">Minimal 8 karakter ( hanya angka atau huruf )</string>
     <string name="error_invalid_confirm_password">Konfirmasi Password tidak sesuai</string>
     <string name="error_invalid_phone">Minimal 10 dan miksimal 12 karakter ( hanya angka )</string>
     <string name="error_incorrect_password">Kata kunci tidak sesuai</string>
@@ -27,7 +27,7 @@
     Link untuk merubah password anda
         akan kami kirimkan ke email valid anda</string>
     <string name="login_text">Sign in to your account</string>
-    <string name="forgot_password">Lupa Password?</string>
+    <string name="forgot_password">Lupa Kata Sandi?</string>
     <string name="help">Help</string>
     <string name="aktif_text">Masukan kode aktivasi</string>
 
@@ -451,7 +451,7 @@
     <string name="slide_3_title">Perlindungan Aset</string>
     <string name="slide_3_desc">Lindungi aset Anda dengan \n Syarat dan Kebijakan yang dapat Anda \n tentukan sendiri</string>
     <string name="slide_4_title">Kelola Informasi</string>
-    <string name="slide_4_desc">Kelola setiap aset anda, \n perbarui informasi, dan adakan \n event promo untuk meningkatkan jumlah transaksi.</string>
+    <string name="slide_4_desc">Untuk memudahkan pelanggan \n dalam mencari aset anda, \n tersedia fasilitas update kalender ketersediaan aset</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_users">UsersActivity</string>
     <string name="title_activity_form_user">FormUserActivity</string>
@@ -475,8 +475,8 @@
     <string name="member_badge_basic">Basic</string>
     <string name="member_badge_verified">Verified</string>
     <string name="member_badge_smart_con">Smart Consumer</string>
-    <string name="basic_desc">"\u2022" Memiliki informasi dasar (Nama, Email dan no. HP)</string>
-    <string name="verified_desc">"\u2022" Basic \n"\u2022" KTP dan KK / Rekening Listrik atau KTP dan 1 akun sosial media</string>
+    <string name="basic_desc">"\u2022" Memiliki Informasi Dasar Berupa Nama, Email dan No. HP</string>
+    <string name="verified_desc">"\u2022" Basic \n"\u2022" Memiliki Informasi KTP dan Rekening Bank</string>
     <string name="smart_cust_desc">"\u2022" Verified. \n"\u2022" Telah menyelesaikan minimal 5 kali transaksi</string>
 
     <string name="value_500jt">500 Juta</string>
@@ -496,4 +496,9 @@
     
     <string name="activation_text_check">Mohon periksa SMS dan email anda \n"untuk mendapatkan kode aktivasi</string>
     <string name="error_field_sim">Harap masukan 12 nomor SIM anda</string>
+
+    <string name="klasifikasi_aset">Klasifikasi Aset</string>
+    <string name="deliv_pickup">Diambil</string>
+    <string name="deliv_deliver">Diantar</string>
+
 </resources>
